# billie-stats-visualizer

./: Dockerfile  Makefile  README.md  pyproject.toml
notebook/notebook/: billie_stats_visualizer.ipynb
