[tool.poetry]
name = "kafka_log_tool"
version = "0.0.1"
description = ""
authors = ["Adam Drazsky <adam.drazsky@themama.ai>"]

[[tool.poetry.source]]
name = "mama-prod"
url = "http://devpi.ch.themama.ai/mama/dev/+simple/"
default = true

[[tool.poetry.source]]
name = "mama-pypi-mirror"
url = "http://devpi.ch.themama.ai/root/pypi/+simple/"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "*"
seaborn = "*"
matplotlib = "*"
ipywidgets = "*"
ipykernel = "*"
jupyter = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-aiohttp = "*"
pytest-asyncio = "*"
jsonschema = "^4.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
